--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,4 @@
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
 
