--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=Config-Default
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=true
