--- a/application-prod.properties
+++ b/application-prod.properties
@@ -1,1 +1,4 @@
-
+spring.application.name=Config-Prod
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
